[gd_scene load_steps=10 format=3 uid="uid://cbfftk0w50y2w"]

[ext_resource type="Texture2D" uid="uid://clgatlfxjh3ln" path="res://sprites/basic life bars a icons .png" id="1_flko3"]
[ext_resource type="Script" path="res://hud.gd" id="1_mbe7r"]

[sub_resource type="LabelSettings" id="LabelSettings_004te"]
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nu1jb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mblin"]
atlas = ExtResource("1_flko3")
region = Rect2(148, 13, 23, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttj00"]
atlas = ExtResource("1_flko3")
region = Rect2(65, 21, 47, 7)

[sub_resource type="LabelSettings" id="LabelSettings_34aje"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_xd0tb"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_cn6dv"]
font_size = 25

[node name="Playerhud" type="CanvasLayer"]
script = ExtResource("1_mbe7r")

[node name="Label" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -88.0
offset_right = -39.0
offset_bottom = -43.0
grow_horizontal = 0
grow_vertical = 0
text = "test
"
label_settings = SubResource("LabelSettings_004te")

[node name="HP" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.890196)
clip_contents = true
offset_left = 40.0
offset_top = 48.0
offset_right = 150.0
offset_bottom = 55.0
scale = Vector2(8, 8)
theme_override_styles/panel = SubResource("StyleBoxEmpty_nu1jb")

[node name="MarginContainer" type="MarginContainer" parent="HP"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 0

[node name="HP_bar" type="TextureProgressBar" parent="HP/MarginContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "Hello World
"
theme_type_variation = &"bar"
max_value = 10.0
value = 6.0
nine_patch_stretch = true
texture_progress = SubResource("AtlasTexture_mblin")

[node name="NinePatchRect" type="NinePatchRect" parent="HP"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_ttj00")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
modulate = Color(0, 0, 0, 0.956863)
offset_left = 48.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 96.0
alignment = 1

[node name="hp_curr" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "text"
label_settings = SubResource("LabelSettings_34aje")
horizontal_alignment = 1
vertical_alignment = 1

[node name="slash" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "/
"
label_settings = SubResource("LabelSettings_xd0tb")

[node name="hp_max" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "test
"
label_settings = SubResource("LabelSettings_cn6dv")
